--- a/src/app.css
+++ b/src/app.css
@@ -4,4 +4,7 @@
 
 body {
   background-color: #0a0a0a;
+  background-image: url("/5451.png");
+  background-repeat: repeat;
+  background-size: 300px 300px;
 }
